top blog section added, but have problem in responsive screen(text overflow in image)need to fix it

--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,9 @@ body{
 .content-one img{
     width: 45px;
 }
+.content-two img{
+    width: 200px;
+}
 .divider{
     border: 1px solid #c0bdbd;
 }
